[package]
name = "profitreport"
version = "0.1.0"
edition = "2021"
authors = ["Björn Guth <scatty@bguth.de"]
description = "A tool to rerport the produced profit based on data from kimai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.0", features = ["derive"] }
