[package]
name = "profitreport"
version = "0.1.0"
edition = "2021"
authors = ["Björn Guth <scatty@bguth.de"]
description = "A tool to rerport the produced profit based on data from kimai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.0", features = ["cargo", "derive"] }
toml = "0.5"
serde = {version = "^1.0", features = ["derive"]}
xdg = "^2.1"
kimai = { git = "https://github.com/scattenlaeufer/kimai-rs.git" }
# kimai = { path = "../kimai-rs" }
